--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,7 @@ jobs:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
         working-directory: .
         run: |
-          echo "Logging in..."
-          docker login -u $env:USER -p $env:TOKEN $env:DOCKER_REGISTRY
-          echo "Building the image..."
-          docker build -f win64.dockerfile -m 6G -t $env:DOCKER_REGISTRY/chaos-initiative/ci/chaos-vsbuildtools:latest .
-          echo "Pushing the image to registry..."
-          docker push $env:DOCKER_REGISTRY/chaos-initiative/ci/chaos-vsbuildtools:latest
+          docker login -u $env:USER -p $env:TOKEN
+          docker build -f win64.dockerfile -m 6G -t $env:USER/chaos-vsbuildtools:latest .
+          docker push $env:USER/chaos-vsbuildtools:latest
           docker logout
