Add write permissions
Just in case in the future

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ on:
 
 jobs:
   build-craftable:
+    permissions:
+        packages: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
